media/NzbHydra/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nzbhydra2
  namespace: media
spec:
  selector:
    matchLabels:
      app: nzbhydra2
  template:
    metadata:
      labels:
        app: nzbhydra2
    spec:
      containers:
      - name: nzbhydra2
        image: linuxserver/nzbhydra2:arm64v8-latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5076
        volumeMounts:
          - mountPath: /config
            name: nzbhydra2-config
          - mountPath: /downloads
            name: downloads
      volumes:
        - name: nzbhydra2-config
          hostPath:
            path: /media/config/nzbhydra2
        - name: downloads
          hostPath:
            path: /media/downloads
