media/NzbHydra/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nzbhydra2
  namespace: media
spec:
  selector:
    app: nzbhydra2
  ports:
  - port: 5076
    targetPort: 5076
